# pymodaq_plugins_rigi

./: README.rst  plugin_info.toml  pyproject.toml
src/pymodaq_plugins_rigi/daq_viewer_plugins/plugins_0D/: daq_0Dviewer_Rigi.py
src/pymodaq_plugins_rigi/daq_viewer_plugins/plugins_2D/: daq_2Dviewer_Rigi.py
src/pymodaq_plugins_rigi/hardware/: ScreenshotMaster.py
