[features]
instruments = false
extensions = false
models = false
h5exporters = false
scanners = false

[urls]
package-url = 'https://github.com/Maloherve/pymodaq_plugins_rigi'

[project]
name = "pymodaq_plugins_rigi"
description = 'Not being able to get the data from the THz Rigi Camera, this plugin screenshots the current screen to extract the data from the Labview display'
dependencies = [
    "pymodaq>=5.0.0",
    "opencv>=4.12.0",
    "pyautogui>=0.9.54",
    #todo: list here all dependencies your package may have
]

authors = [
    {name = "Malo Hervé", email = "malo.herve@epfl.ch"},
]

maintainers = [
    {name = "Malo Hervé", email = "malo.herve@epfl.ch"},
]

# nottodo: leave everything below as is!

dynamic = ["version", "urls", "entry-points"]
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[build-system]
requires = [
    "hatchling>=1.9.0",
    "hatch-vcs", "toml",
    "pymodaq_utils>=0.0.6",
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.version]
source = "vcs"

